    generic libpthread code.
  * patches/hurd-i386/libpthread_build.diff: Fix header inclusion to get
    pthread headers from libpthread/ instead of system.
  * sysdeps/hurd.mk: Create symlinks to kernel and hurd headers required for
    build, so that we can pass --with-headers to configure to make the build
    really self-hosted.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 09 Aug 2015 20:00:16 +0000

glibc (2.19-19) unstable; urgency=medium

  * patches/hurd-i386/cvs-mlock.diff: New patch to permit to use mlock from
    non-root process.

 -- Samuel Thibault <sthibault@debian.org>  Thu, 09 Jul 2015 14:28:56 +0200

glibc (2.19-18) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debhelper.in/locales.templates: allow the C.UTF-8 locale to be
    selected as the default locale. Closes: #782241.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 14 Apr 2015 19:50:11 +0200

glibc (2.19-17) unstable; urgency=medium

  [ Adam Conrad ]
  * debian/rules.d/debhelper.mk: Unconditionally create tmp.substvars.
    Closes: #780431.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Mar 2015 10:17:56 +0100

glibc (2.19-16) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: New patch to allow
    libpthread.so to be dynamically loaded from a dlopened library.
  * patches/hurd-i386/cvs-libpthread-libc-lockP{,2}.diff: New patch to
    dynamically call pthread functions from libc.

  [ Aurelien Jarno ]
  * We have a transition mechanism for the locales, as the Debian archive
    used to expose arch:all packages on all architectures even when the
    corresponding arch:any package is not available yet. This has been
    fixed long time ago, the transition mechanism has not been used
    correctly for a lot of time and has been broken by the split out of
    libc-bin. The breakage has been partially fixed by the "Breaks: locales 
    (<< 2.19)" added to libc6. It's now time to add the missing "Depends: