@@ -2,6 +2,10 @@ Use the realtime clock for the monotonic clock. This is of course not a proper
 implementation (which is being done in Mach), but will permit to fix at least
 the iceweasel stack.
 
+vlc however doesn't build when _POSIX_CLOCK_SELECTION is enabled but
+_POSIX_TIMERS is not, and they refuse to fix that (see #765578), so disable the
+former.
+
 ---
  sysdeps/mach/hurd/bits/posix_opt.h |    2 +-
  sysdeps/unix/clock_gettime.c       |    1 +
@@ -22,12 +26,17 @@ Index: eglibc-2.16/sysdeps/mach/hurd/bits/posix_opt.h
 ===================================================================
 --- eglibc-2.16.orig/sysdeps/mach/hurd/bits/posix_opt.h	2012-07-23 00:41:03.000000000 +0200
 +++ eglibc-2.16/sysdeps/mach/hurd/bits/posix_opt.h	2012-07-23 00:41:10.000000000 +0200
-@@ -163,7 +163,7 @@
+@@ -163,10 +163,10 @@
  #define _POSIX_THREAD_PROCESS_SHARED	-1
  
  /* The monotonic clock might be available.  */
 -#define _POSIX_MONOTONIC_CLOCK	0
 +#define _POSIX_MONOTONIC_CLOCK	200809L
  
- /* The clock selection interfaces are available.  */
- #define _POSIX_CLOCK_SELECTION	200809L
+-/* The clock selection interfaces are available.  */
++/* The clock selection interfaces are not really available yet.  */
+-#define _POSIX_CLOCK_SELECTION	200809L
++#define _POSIX_CLOCK_SELECTION	-1
+ 
+ /* Advisory information interfaces could be available in future.  */
+ #define _POSIX_ADVISORY_INFO	0
