@@ -242,6 +242,8 @@ glibc (2.19-20~0) UNRELEASED; urgency=medium
   * sysdeps/hurd.mk: Create symlinks to kernel and hurd headers required for
     build, so that we can pass --with-headers to configure to make the build
     really self-hosted.
+  * patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: Update patch to not
+    advertise _POSIX_CLOCK_SELECTION for vlc
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 09 Aug 2015 20:00:16 +0000
 
